assets/css/main.css
/* ... */
#about {
  font-size: 120%;
  width: 90%;
  margin: 0 auto;
  max-width: 960px;
}

@media only screen and (min-width:768px) {
  #about {
    width: 80%
  }
}

#about svg {
  width: 60px !important;
  height: auto
}

.tech {
  margin: 10px;
  flex: 1 1 0
}

.tech h2, .tech h3, .user-details h1, body {
  font-weight: 400
}

.user {
  text-align: center;
  font-size: 60px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between
}
p {
  color: white;
  font-family: Montserrat,sans-serif

}

.user h2 {
  color: #0073e6;
  font-family: Montserrat,sans-serif
}
.user-details h1 {
  color: #0073e6;
  font-family: Montserrat,sans-serif
}
user-details p {
  font-size: 16px;
  font-family: Montserrat,sans-serif
}

.user p {
  font-size: 16px;
  font-family: Montserrat,sans-serif
}

@media only screen and (min-width:768px) {
  .user {
    flex-wrap: nowrap;
    font-size: 75px
  }
}

.user-details {
  text-align: center;
  margin: 5px auto
}

.footer {
  background: #1a222c;
  padding: 10px 0;
  margin-top: 100px;
  text-align: center;
  color: #fff
}

.footer .love {
  color: red
}

.footer a {
  text-decoration: none;
  margin: 0;
  color: #fff
}

